force-app/main/default/objects/Opportunity_Item__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date of Event</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>