force-app/main/default/objects/Opportunity_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OrderApi__Item__c.OrderApi__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Opportunity Items</relationshipLabel>
    <relationshipName>Opportunity_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>