force-app/main/default/objects/Opportunity_Item__c/fields/Price_Override__c.field-meta.xml
<CustomField>
    <fullName>Price_Override__c</fullName>
    <formula>IF ( AND(NOT(ISNULL(Sale_Price__c)),NOT(ISNULL(List_Price__c )),Sale_Price__c  &lt;&gt;  List_Price__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Override</label>
    <type>Checkbox</type>
</CustomField>