force-app/main/default/objects/Opportunity_Item__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <inlineHelpText>Sale Price will populate with the List Price after the Opportunity Item has been saved. If the Sale Price needs to be changed, it can be edited and the Sold Price will update with proper calculation.</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>