force-app/main/default/objects/Opportunity_Item__c/fields/Sold_Price_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sold_Price_Total_Amount__c</fullName>
    <formula>IF( Price_Override__c  = false , List_Price__c*Quantity__c, Sale_Price__c * Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold Price (Total Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>